[package]
name = "curve25519-repl"
version = "0.1.0"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
license = "BSD-2-Clause"

[dependencies]
hex = "0.3.2"
combine = "3.6.1"
curve25519-dalek = "0.21.0"
rustyline = "2.1.0"
digest = { version = "0.8.0", features = ["std"] }
rand = "0.5.5"
blake2 = { version = "0.8.0", optional = true }
sha2 = { version = "0.8.0", optional = true }
sha3 = { version = "0.8.0", optional = true }
nanocurrency-types = { version = "0.3.14", optional = true }
serde = "1.0.80"
serde_json = "1.0.32"

[features]
nano = ["nanocurrency-types", "blake2"]
default = ["sha2"]
